--- a/Noise.ipynb
+++ b/Noise.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPNfVtPxKMgvHDOZeJxtMtB",
+      "authorship_tag": "ABX9TyNjjlPJcq2r6AiXGLP+McrS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,9 +30,11 @@
         "id": "UIw7XKKkBaAq"
       },
       "source": [
-        ""
+        "import cv2\r\n",
+        "import numpy as np\r\n",
+        "img = cv2.imread('window.jpg')"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     }
   ]
